Fix alignment on identify input

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -32,8 +32,7 @@ tray-login {
         font-weight: 300;
         height: 47px;
         line-height: 14px;
-        padding: 13px 0 14px;
-        text-indent: 36px;
+        padding: 13px 0 14px 36px;
         width: 100%;
 
         &:focus {
